<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="#FFFFFF">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">
            <TextView
                android:id="@+id/menu"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:text="@string/beverage"
                android:textSize="30sp" />
        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textMultiLine"
            />
        <TextView
            style="@style/TextStyle"
            android:text="@string/hot" />

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <!-- This is Coffe Section -->
                <LinearLayout
                    android:id="@+id/cofee"
                    style="@style/item_menu_layout_style"
                    tools:context=".MainActivity">

                    <TextView
                        android:id="@+id/quantity"
                        style="@style/item_name_menu_text_style"
                        android:text="@string/coffee" />
                    <ImageView
                        style="@style/Image_style"
                        android:src="@drawable/coffe_cup"
                        android:id="@+id/pic_coffe"/>

                    <LinearLayout style="@style/item_layout_menu_style">

                        <Button
                            android:id="@+id/increase_coffee"
                            style="@style/button_increase_quantity_menu_style"
                            android:onClick="increment_coffee" />

                        <TextView
                            android:id="@+id/quantity_coffee_text_view"
                            style="@style/item_quantity_menu_text_style"
                            android:text="0"/>

                        <Button
                            android:id="@+id/decrease_coffee"
                            style="@style/button_decrease_quantity_menu_style"
                            android:onClick="decrement_coffee"/>
                    </LinearLayout>

                    <!---<Button
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:onClick="clear"
                        android:text="@string/clear" />-->

                </LinearLayout>


                <!-- This is Tea Section -->


                <LinearLayout
                    android:id="@+id/tea"
                    style="@style/item_menu_layout_style"
                    tools:context=".MainActivity">

                    <TextView
                        android:id="@+id/quantity_tea"
                        style="@style/item_name_menu_text_style"
                        android:text="@string/tea" />
                    <ImageView
                        android:src="@drawable/tea_new"
                        style="@style/Image_style"/>

                    <LinearLayout style="@style/item_layout_menu_style">

                        <Button
                            android:id="@+id/increase_tea"
                            style="@style/button_increase_quantity_menu_style"
                            android:onClick="increment_tea" />

                        <TextView
                            android:id="@+id/quantity_tea_text_view"
                            style="@style/item_quantity_menu_text_style"
                            android:text="0" />

                        <Button
                            android:id="@+id/decrease_tea"
                            style="@style/button_decrease_quantity_menu_style"
                            android:onClick="decrement_tea" />
                    </LinearLayout>
                </LinearLayout>
<!-- soup starts -->
                <LinearLayout
                    android:id="@+id/soup"
                    style="@style/item_menu_layout_style"
                    tools:context=".MainActivity">

                    <TextView
                        android:id="@+id/quantity_soup"
                        style="@style/item_name_menu_text_style"
                        android:text="@string/Soup" />
                    <ImageView
                        android:src="@drawable/soup_new"
                        style="@style/Image_style"/>

                    <LinearLayout style="@style/item_layout_menu_style">

                        <Button
                            android:id="@+id/increase_soup"
                            style="@style/button_increase_quantity_menu_style"
                            android:onClick="increment_soup" />

                        <TextView
                            android:id="@+id/quantity_soup_text_view"
                            style="@style/item_quantity_menu_text_style"
                            android:text="0"/>

                        <Button
                            android:id="@+id/decrease_soup"
                            style="@style/button_decrease_quantity_menu_style"
                            android:onClick="decrement_soup" />
                    </LinearLayout>

                    <!---<Button
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:onClick="clear"
                        android:text="@string/clear" />-->

                </LinearLayout>



                <!-- This is Hot Chocolate Section -->
                <LinearLayout
                    android:id="@+id/hotChocolate"
                    style="@style/item_menu_layout_style"
                    tools:context=".MainActivity">

                    <TextView
                        android:id="@+id/quantity_chocolate"
                        style="@style/item_name_menu_text_style"
                        android:text="@string/hotChocolate" />
                    <ImageView
                        android:src="@drawable/hotchocoltae_icon"
                        style="@style/Image_style"/>

                    <LinearLayout style="@style/item_layout_menu_style">

                        <Button
                            android:id="@+id/increase_hotChocolate"
                            style="@style/button_increase_quantity_menu_style"
                            android:onClick="increment_hotChocolate" />

                        <TextView
                            android:id="@+id/quantity_hotChocolate_text_view"
                            style="@style/item_quantity_menu_text_style"
                            android:text="0"/>

                        <Button
                            android:id="@+id/decrease_hotChocolate"
                            style="@style/button_decrease_quantity_menu_style"
                            android:onClick="decrement_hotChocolate" />
                    </LinearLayout>
                </LinearLayout>



            </LinearLayout>
        </HorizontalScrollView>


        <!--start - - - here cold start- - - - - - - -  - - - - - - -  start -->
       <TextView
        style="@style/TextStyle"
        android:text="@string/cold" />

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <!-- This is Coffe Section -->
                <LinearLayout
                    android:id="@+id/coldCofee"
                    style="@style/item_menu_layout_style"
                    android:onClick="increment_coldcoffee"
                    tools:context=".MainActivity">

                    <TextView
                        android:id="@+id/quantity_coldCoffee"
                        style="@style/item_name_menu_text_style"
                        android:text="@string/coldcoffee" />
                    <ImageView
                        android:src="@drawable/coldcooffe_icon"
                        style="@style/Image_style"/>

                    <LinearLayout style="@style/item_layout_menu_style">

                        <Button
                            android:id="@+id/increase_coldCoffee"
                            style="@style/button_increase_quantity_menu_style"
                            android:onClick="increment_coldcoffee" />

                        <TextView
                            android:id="@+id/quantity_coldcoffee_text_view"
                            style="@style/item_quantity_menu_text_style"
                            android:text="0"/>

                        <Button
                            android:id="@+id/decrease_coldCoffee"
                            style="@style/button_decrease_quantity_menu_style"
                            android:onClick="decrement_coldcoffee"/>
                    </LinearLayout>

                    <!---<Button
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:onClick="clear"
                        android:text="@string/clear" />-->

                </LinearLayout>


                <!-- This is jaljeera Section -->
                <LinearLayout
                    android:id="@+id/jaljeera"
                    style="@style/item_menu_layout_style"
                    tools:context=".MainActivity">

                    <TextView
                        android:id="@+id/quantity_jaljeera"
                        style="@style/item_name_menu_text_style"
                        android:text="@string/jaljeera" />
                    <ImageView
                        android:src="@drawable/new_jaljeera"
                        style="@style/Image_style"/>

                    <LinearLayout style="@style/item_layout_menu_style">

                        <Button
                            android:id="@+id/increase_jaljeera"
                            style="@style/button_increase_quantity_menu_style"
                            android:onClick="increment_jaljeera" />

                        <TextView
                            android:id="@+id/quantity_jaljeera_text_view"
                            style="@style/item_quantity_menu_text_style"
                            android:text="0"/>

                        <Button
                            android:id="@+id/decrease_jaljeera"
                            style="@style/button_decrease_quantity_menu_style"
                            android:onClick="decrement_jaljeera" />
                    </LinearLayout>
                </LinearLayout>


                <!-- This is nimbuPaani Section -->
                <LinearLayout
                    android:id="@+id/nimbuPaani"
                    style="@style/item_menu_layout_style"
                    tools:context=".MainActivity">

                    <TextView
                        android:id="@+id/quantity_nimbuPaani"
                        style="@style/item_name_menu_text_style"
                        android:text="@string/lemonade" />
                    <ImageView
                        android:src="@drawable/lemonade_icon"
                        style="@style/Image_style"/>

                    <LinearLayout style="@style/item_layout_menu_style">

                        <Button
                            android:id="@+id/increase_nimbuPaani"
                            style="@style/button_increase_quantity_menu_style"
                            android:onClick="increment_nimbuPaani" />

                        <TextView
                            android:id="@+id/quantity_nimbuPaani_text_view"
                            style="@style/item_quantity_menu_text_style"
                            android:text="0"/>

                        <Button
                            android:id="@+id/decrease_nimbuPaani"
                            style="@style/button_decrease_quantity_menu_style"
                            android:onClick="decrement_nimbuPaani" />
                    </LinearLayout>

                    <!---<Button
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:onClick="clear"
                        android:text="@string/clear" />-->

                </LinearLayout>



                <!-- This is Krushers Section -->
                <LinearLayout
                    android:id="@+id/krushers"
                    style="@style/item_menu_layout_style"
                    tools:context=".MainActivity">

                    <TextView
                        android:id="@+id/quantity_krushers"
                        style="@style/item_name_menu_text_style"
                        android:text="@string/krushers" />
                    <ImageView
                        android:src="@drawable/krushers_new"
                        style="@style/Image_style"/>

                    <LinearLayout style="@style/item_layout_menu_style">

                        <Button
                            android:id="@+id/increase_krushers"
                            style="@style/button_increase_quantity_menu_style"
                            android:onClick="increment_krushers" />

                        <TextView
                            android:id="@+id/quantity_krushers_text_view"
                            style="@style/item_quantity_menu_text_style"
                            android:text="0"/>

                        <Button
                            android:id="@+id/decrease_krushers"
                            style="@style/button_decrease_quantity_menu_style"
                            android:onClick="decrement_krushers" />
                    </LinearLayout>
                </LinearLayout>



            </LinearLayout>
        </HorizontalScrollView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/pricetext_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="#000000"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:layout_marginRight="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15sp"
                android:textColor="#000000" />
        </LinearLayout>
        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="8dp"
            android:paddingEnd="8dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp">
                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="wrap_content"
                    android:text=""
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:padding="8dp"/>
                <TextView
                    android:id="@+id/item_quantity"
                    android:layout_width="wrap_content"
                    android:text=""
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:padding="8dp"/>
                <TextView
                    android:id="@+id/item_rateppc"
                    android:layout_width="wrap_content"
                    android:text=""
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:padding="8dp"/>
                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:padding="8dp"/>
            </LinearLayout>
        </HorizontalScrollView>
        <Button
            android:id="@+id/button2_id"
            style="@style/button_increase_quantity_menu_style"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/placeorder"
            android:onClick="submitOrder"
            android:textColor="@color/black"
            android:background="#3e2723"
            android:layout_margin="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helpline"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingBottom="8dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:id="@+id/email"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/email"
            android:onClick="composeEmail"
            android:textColor="@color/black" />
        <Button
            android:id="@+id/call"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/message"
            android:onClick="open_phone"
            android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>